# skiff-desktop

./: .editorconfig  .gitignore  README.md  com.fyralabs.SkiffDesktop.Devel.json  com.fyralabs.SkiffDesktop.json  com.fyralabs.ValaTemplate.Devel.json  com.fyralabs.ValaTemplate.json  meson.build  meson_options.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml
data/: app.desktop.in.in  app.service.in  appdata.xml.in.in  desktop.in.in  gresource.xml.in  gschema.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: mainwindow.blp  meson.build
po/: LINGUAS  POTFILES  com.fyralabs.SkiffDesktop.pot  com.fyralabs.ValaTemplate.pot  cs.po  de.po  en_owo.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  nl.po  pt_BR.po  ru.po  sv.po  th.po  tr.po  yue.po  zh_Hans.po  zh_Hant.po
src/: Application.vala  Config.vapi  MainWindow.vala  MessageHandler.vala  meson.build
